--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of Users - API</title>
-    <link rel="stylesheet" href="src/css/style.css">
-</head>
-<body>
-    <h1>Hello, I am here !</h1>
-    <script src="src/app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>List of Users - API</title>
+        <link rel="stylesheet" href="src/css/style.css">
+    </head>
+    <body>
+        <form action="#">
+            <input type="text" id="name" class="" placeholder="Name" required>
+            <input type="number" id="" class="" placeholder="CPF" required>
+            <input type="date" id="" class="" placeholder="Birthdate">
+            <input type="email" id="" class="" placeholder="Email" required>
+            <input type="password" id="" class="" placeholder="Password" required>
+            <input type="text" id="" class="" placeholder="Adress" required>
+            <input type="number" id="" class="" placeholder="Number" required>
+            <input type="text" id="" class="" placeholder="Complement" required>
+            <input type="text" id="" class="" placeholder="City" required>
+            <input type="text" id="" class="" placeholder="State" required>
+            <input type="text" id="" class="" placeholder="Country" required>
+            <input type="number" id="" class="" placeholder="Zipcode" required>
+        </form>
+    </body>
 </html>
