--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="search">
             <input type="search" id="" placeholder="Search">
+            <!-- <input id="submit" type="submit" value=""> -->
         </div>
          
         <form action="#">
